--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -6,7 +6,6 @@ on:
     branches:
       - '*'
 
-
 jobs:
   benchmarks:
     runs-on: ubuntu-20.04
@@ -29,9 +28,8 @@ jobs:
           test_apk: 'microbenchmark/build/outputs/apk/androidTest/release/microbenchmark-release-androidTest.apk'
           device_model: 'redfin,locale=en,orientation=portrait'
 
-          # Optional, for Datadog upload
           dd_api_key: ${{ secrets.DD_API_KEY }}
           dd_metric_prefix: 'android.benchmark'
+          dd_dashboard_url: 'https://p.datadoghq.com/sb/5218edc4-01bd-11ed-a9be-da7ad0900002-8b732d527dbbc83641c63ef56364d8d1'
 
-          # Optional, to create a dashboard issue that publishes the latest results
           github_token: ${{ github.token }}
