--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -27,6 +27,8 @@ jobs:
           app_apk: 'app/build/outputs/apk/release/app-release.apk'
           test_apk: 'microbenchmark/build/outputs/apk/androidTest/release/microbenchmark-release-androidTest.apk'
           device_model: 'redfin,locale=en,orientation=portrait'
+          directories_to_pull: '/sdcard/Download'
+          environment_variables: 'clearPackageData=true,additionalTestOutputDir=/sdcard/Download,no-isolated-storage=true'
 
           dd_api_key: ${{ secrets.DD_API_KEY }}
           dd_metric_prefix: 'android.benchmark'
